# cefr-text-difficulty

./: pyproject.toml
results/: llm_model0_CoTTrue_Shot0.json  llm_model2_CoTFalse_Shot0.json  llm_model2_CoTFalse_Shot1.json  llm_model2_CoTFalse_Shot2.json  llm_model2_CoTFalse_Shot8.json  llm_model2_CoTTrue_Shot1.json  llm_model2_CoTTrue_Shot4.json  llm_model2_CoTTrue_Shot8.json  llm_model3_CoTFalse_Shot0.json  llm_model3_CoTFalse_Shot1.json  llm_model3_CoTFalse_Shot2.json  llm_model3_CoTFalse_Shot8.json  llm_model3_CoTTrue_Shot1.json  llm_model3_CoTTrue_Shot2.json  llm_model3_CoTTrue_Shot4.json
results/cefr_sp_en/: bert_layerwise_probe_results.json  best_run_comparison_vs_llm.csv  best_run_comparison_vs_llm.json  embedding_probe_results.json  experiment_results.json  feature_correlations.csv  feature_groups.json  feature_importance.csv  feature_selection_results.json  feature_selection_stable_features.csv  features.csv  llm_best_model2_CoTTrue_Shot4_summary.json  llm_model0_CoTFalse_Shot0.json  llm_model1_CoTFalse_Shot0.json  llm_model1_CoTTrue_Shot0.json  llm_model2_CoTFalse_Shot4.json  llm_model2_CoTTrue_Shot0.json  llm_model2_CoTTrue_Shot2.json  llm_model2_CoTTrue_Shot4.json  llm_model3_CoTFalse_Shot4.json  llm_model3_CoTTrue_Shot0.json  llm_model3_CoTTrue_Shot8.json  llm_results_summary.csv  multi_agent_best_model2_CoTTrue_Shot4_summary.json  multi_agent_model2_CoTTrue_Shot4.json  multi_agent_results_summary.csv  rag_best_model2_CoTTrue_Shot4_summary.json  rag_model2_CoTTrue_Shot4.json  (+4 more)
src/: config.py  data_loader.py  feature_extraction.py  run_experiments.py
(+65 files in other folders)
